--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -32,8 +32,17 @@
 <p>4.就可以開始編輯了</p>
 <p><img alt="" height="382" src="/images/1615380702356.jpg" width="562"/></p>
 <h1>old repositories update</h1>
+<p>1.因為舊的repositiors和更新版只差7個更新檔案，所以只需要git pull 更新檔案就好、所以</p>
+<p>Step1.到你的cmsimde <span>→ </span>git pull origin master</p>
+<p><img alt="" height="292" src="/images/1.jpg" width="560"/></p>
+<p>Step2.他就會顯示已經download 7個檔案</p>
+<p><img alt="" height="291" src="/images/2.jpg" width="560"/></p>
 <p></p>
-<p></p><h1>repositories create</h1>
+<p></p>
+<p></p>
+<p><img alt="" height="575" src="/images/3.jpg" width="563"/></p>
+<p></p>
+<h1>repositories create</h1>
 <p><span>notice: 因為cmsimde改版 所以設定全部更新</span></p>
 <p><span>(1)system <a href="https://github.com/mdecourse/cd2021/discussions/7">cd2021可攜系統 </a></span></p>
 <p><span>(2)download  <a href="https://drive.google.com/file/d/1R6vAAWdNDigmyvFFQTKyM-XNKOWeCFJU/view">kmol2021 spring  v2.7z</a></span></p>
@@ -54,12 +63,6 @@
 <p><span>(6) 打指令 git clone --recurse-submodules https://github.com/40823111/cd2021.git</span></p>
 <p><span><img alt="" height="289" src="/images/1615441848121.jpg" width="555"/></span></p>
 <p>(7)進入 cd2021<span>→cmsimde→up_dir(裡面有5個檔案)</span></p>
-<ol>
-<li><span>init.py</span><span> </span>- 其中的 site_title, ip 與 port 可以讓使用者自行修改, site_title 是網站標題, ip 為動態網站啟動時所使用的網路位址, 可設為內部或外部 IPv4 (IPv6), port 則是動態網站啟動時所佔用的埠號.</li>
-<li><span>http-server.py</span><span> </span>- 執行後會使用內建的 localhost 與 port 8444 伺服 content 子目錄中的 CMSiMDE 靜態網頁.</li>
-<li><span>cms.bat</span><span> </span>- 讓使用者執行動態網站用的批次檔案.</li>
-<li><span>acp.bat</span><span> </span>- 若使用者已經將倉儲設為 ssh 連線, 且提供遠端與近端的認證模式, 則可以在執行此批次指令之後加上提交字串, 即可執行 git add ., git commit -m "提交訊息", 以及 git push 等三個指令.</li>
-</ol>
 <p><img alt="" height="477" src="/images/螢幕擷取畫面 2021-03-11 152457.png" width="560"/></p>
 <p></p>
 <p>(7) 完成後 就可以git push</p>
