--- a/content/old repositories update.html
+++ b/content/old repositories update.html
@@ -139,11 +139,19 @@ img.add_border {
 <p><img alt="" height="292" src="./../images/1.jpg" width="560"/></p>
 <p>Step2.他就會顯示已經download 7個檔案</p>
 <p><img alt="" height="291" src="./../images/2.jpg" width="560"/></p>
+<p>檔案說明:</p>
+<ol>
+<li><span>init.py</span><span> </span>- 其中的 site_title, ip 與 port 可以讓使用者自行修改, site_title 是網站標題, ip 為動態網站啟動時所使用的網路位址, 可設為內部或外部 IPv4 (IPv6), port 則是動態網站啟動時所佔用的埠號.</li>
+<li><span>http-server.py</span><span> </span>- 執行後會使用內建的 localhost 與 port 8444 伺服 content 子目錄中的 CMSiMDE 靜態網頁.</li>
+<li><span>cms.bat</span><span> </span>- 讓使用者執行動態網站用的批次檔案.</li>
+<li><span>acp.bat</span><span> </span>- 若使用者已經將倉儲設為 ssh 連線, 且提供遠端與近端的認證模式, 則可以在執行此批次指令之後加上提交字串, 即可執行 git add ., git commit -m "提交訊息", 以及 git push 等三個指令.</li>
+</ol>
 <p></p>
-<p></p>
-<p></p>
+<p>Step3. 到你的 updir 把你的更新檔複製到你的cd2021<span>→ complete→ 以後你的工作都在cd2021</span></p>
 <p><img alt="" height="575" src="./../images/3.jpg" width="563"/></p>
-<p></p><br />edit Reveal << <a href='edit Reveal.html'>Previous</a> <a href='repositories create.html'>Next</a> >> repositories create</div>
+<p>Step4.</p>
+<p>以後要開cmsimde(到你的cd2021)=cms(動態就會自己開)</p>
+<p><span>以後要開上傳(到你的cd2021)=acp </span></p><br />edit Reveal << <a href='edit Reveal.html'>Previous</a> <a href='repositories create.html'>Next</a> >> repositories create</div>
         
     <!-- footer -->
       <div class="container">
