--- a/content/week6.html
+++ b/content/week6.html
@@ -133,7 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week5 << <a href='week5.html'>Previous</a> <br /><h1>week6</h1><br />week5 << <a href='week5.html'>Previous</a> </div>
+    <div id="tipue_search_content">week5 << <a href='week5.html'>Previous</a> <br /><h1>week6</h1>
+<p>創建協同</p>
+<p>step1</p>
+<p></p><br />week5 << <a href='week5.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
