--- a/config/content.htm
+++ b/config/content.htm
@@ -154,3 +154,8 @@ git push</pre>
 <h2>week8</h2>
 <p>手套 </p>
 <h2>week9</h2>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pLdbxNwan2k" title="YouTube video player" width="560"></iframe></p>
+<p></p>
+<p><a href="https://github.com/40823111/cd2021/blob/main/123/final.ttt">棒球模擬機.ttt </a></p>
+<p></p>
