--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -86,9 +86,8 @@ git push</pre>
 <p><img alt="" height="288" src="/images/螢幕擷取畫面 2.png" width="554"/></p>
 <p><span></span></p>
 <p></p>
-<h1>week</h1>
-<h2>stage1</h2>
-<h3>week1</h3>
+<h1>stage1</h1>
+<h2>week1</h2>
 <p>第一階段分組協同實習:</p>
 <p>每週分組報告必須包含 html, pdf 與 Youtube 影片:</p>
 <p>標題:<span> </span><span>2021-協同產品設計實習-stage1-ag1</span></p>
@@ -102,13 +101,13 @@ git push</pre>
 <li><span>請在各組組長的 Github 帳號下建立各組的分組網站, 惟在 W1 進行各班定組序過程中, 發現即便採用 Ethercalc 以網際協同方式同步讓各班自選組員填入兩兩成組的學員學號, 但仍缺人工或自動定各班組序的有效方案, 在此責成各組在進行自選的協同產品開發項目之際 (W2-W4), 將此議題列為必選的題目之一, 詳細說明各組認為最有效率的第一階段與訂定組序的方法及流程.</span></li>
 <li><span>此外, 為了讓各組在 stage1 分組協同實習過程, 能透過網誌發表各組組員在 W2-W4 過程中的各項作為與心得報告, 說明可利用 Leo Editor 協助 CMSiMDE 中的 Pelican 發表協同網誌, 其目的是讓各分組在協同期間, 能完整呈現各階段所留下的網誌紀錄. 但此方式必須熟悉 Leo Editor 的操作, 因此有關透過 Pelican 建立協同網誌一事, 除利用 Leo Editor 協助設定並建立 pelican 網誌外, 也將此議題列為各組在 Stage1 協同產品設計流程中必選題目之二, 請各組詳細說明採用或不採用 Leo Editor 的兩種情況下, 各組員在設定與建立協同網誌的過程所可能遭遇或產生的問題與解決方案.</span></li>
 </ol>
-<h3>week2</h3>
+<h2>week2</h2>
 <p>我們的主題 及 進度說明</p>
 <p><span>題目:套圈遊樂器</span><br/><span>動機:經常於夜市中看到的套圈圈，於軟體中進行模擬與參數調整，對其分析統整，求得各類結果</span><br/><span>第二周:零件創建與機構改善</span><br/><span>第三周:軟體模擬與程式編輯</span><br/><span>第四周:統整結果與報告內容</span></p>
 <p><span></span></p>
 <p><span>這是把圈圈送到上面的運輸機構</span></p>
 <p><img alt="" height="380" src="/images/1615381525022.jpg" width="566"/></p>
-<h3>week3</h3>
+<h2>week3</h2>
 <h4>機構 程式</h4>
 <p>1.機構完成 運送機構改善配合及組裝(inventor 組合圖)</p>
 <p><img alt="" height="400" src="/images/1615645697398.jpg" width="558"/></p>
@@ -118,7 +117,7 @@ git push</pre>
 <h4>改良</h4>
 <p>1.因為前面設計的機構太過理想，雖然在inventor上可以模擬，但是到CoppeliaSim由於干涉太多及運動過程中會有震動，導致圈圈沒辦法正常運送</p>
 <p></p>
-<h3>week4</h3>
+<h2>week4</h2>
 <p>1.工程圖</p>
 <p><img alt="" height="402" src="/images/Inventor_9Oy4NiufCt.png" width="571"/></p>
 <p></p>
@@ -127,11 +126,11 @@ git push</pre>
 <p></p>
 <p>3.完成品</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/md3fNab1UXo" width="560"></iframe></p>
-<h2>stage2</h2>
-<h3>week5</h3>
+<h1>stage2</h1>
+<h2>week5</h2>
 <p>step2 題目 : 自動打球機及手動接球</p>
 <p>設計 自動送球機構 及 接球手套 機械手臂打球(打者) 和 手動機械手臂接球(防守者)</p>
-<h3>week6</h3>
+<h2>week6</h2>
 <h4>設計理想</h4>
 <ol>
 <li>一個平台(棒球場) 球打出去後可以接球(防守者) 漏接的球可以自動流回輸送台，再次被送回來</li>
@@ -148,7 +147,7 @@ git push</pre>
 <p>          組長授權給組員</p>
 <p>流程示意圖</p>
 <p><img alt="" height="426" src="/images/222.jpg" width="567"/></p>
-<h3>week7</h3>
+<h2>week7</h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Y33taPcSXP0" title="YouTube video player" width="560"></iframe></p>
 <p>模擬失敗 </p>
 <p> 問題 1. 因為我們是設計螺旋線的上升機構， 所以到輸送平台時把它用直線，導致不符合公差尺寸而跑掉</p>
@@ -176,7 +175,7 @@ git push</pre>
 <li>藉由DH法做運動預期</li>
 <li>加入運動學運算</li>
 </ol>
-<h3>week8</h3>
+<h2>week8</h2>
 <h4>送球機構</h4>
 <p>問題1 : <span>球進不去 只能靠後面球的推力才可以勉強塞進去</span></p>
 <p></p>
@@ -189,20 +188,24 @@ git push</pre>
 <p><span></span></p>
 <p><span></span></p>
 <p><span>改善: 斜度改小 把凹槽加長 使凹槽和倒角之間有一個倒三角形可以讓球跑到裡面卡住 不會往後滾</span></p>
-<h3>week9</h3>
+<h2>week9</h2>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pLdbxNwan2k" title="YouTube video player" width="560"></iframe></p>
 <p></p>
 <p><a href="https://github.com/40823111/cd2021/blob/main/123/final.ttt">棒球模擬機.ttt</a></p>
-<h2>stage3</h2>
-<h3>week10</h3>
-<h4>task1</h4>
+<h1>stage3</h1>
+<h2>week10</h2>
+<h3>task1</h3>
 <p><span>讀取 stage3_2a.txt, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結</span></p>
 <p><span></span></p>
-<h4>task2</h4>
+<h3>task2</h3>
 <p><span>採 Python remote API 進行操控</span></p>
 <p><span></span></p>
-<h3>week11</h3>
-<h4>task3</h4>
+<p><span>step1  </span></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span></span></p><h2>week11</h2>
+<h3>task3</h3>
 <p>影片直播</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/BaqrJgY4yKA" title="YouTube video player" width="560"></iframe></p>
