--- a/content/task1.html
+++ b/content/task1.html
@@ -133,17 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week2 << <a href='week2.html'>Previous</a> <a href='week4.html'>Next</a> >> week4<br /><h1>week3</h1>
-<h4>機構 程式</h4>
-<p>1.機構完成 運送機構改善配合及組裝(inventor 組合圖)</p>
-<p><img alt="" height="400" src="./../images/1615645697398.jpg" width="558"/></p>
-<p> 各種零件檔</p>
-<p>2.程式模擬(測試爪子的路徑和抓的力道)</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fbIq6b8Xybo" width="560"></iframe></p>
-<h4>改良</h4>
-<p>1.因為前面設計的機構太過理想，雖然在inventor上可以模擬，但是到CoppeliaSim由於干涉太多及運動過程中會有震動，導致圈圈沒辦法正常運送</p>
-<p></p>
-<br />week2 << <a href='week2.html'>Previous</a> <a href='week4.html'>Next</a> >> week4</div>
+    <div id="tipue_search_content">week10 << <a href='week10.html'>Previous</a> <a href='task2.html'>Next</a> >> task2<br /><h1>task1</h1>
+<p><span>讀取 stage3_2a.txt, 建立 Stage3 的分組倉儲, 分組網頁, 以及各組員倉儲及網頁連結</span></p>
+<p><span></span></p>
+<br />week10 << <a href='week10.html'>Previous</a> <a href='task2.html'>Next</a> >> task2</div>
         
     <!-- footer -->
       <div class="container">
