--- a/content/task2.html
+++ b/content/task2.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='week.html'>week</a><ul class='dropdown'><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='week5.html'>week5</a><li><a href='week6.html'>week6</a><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='week10.html'>week10</a><li><a href='week11.html'>week11</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li class='has-children'><a href='leo.html'>leo</a><ul class='dropdown'><li><a href='edit blog.html'>edit blog</a><li><a href='edit Reveal.html'>edit Reveal</a></li></ul><li><a href='old repositories update.html'>old repositories update</a><li><a href='repositories create.html'>repositories create</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='week1.html'>week1</a><li><a href='week2.html'>week2</a><li><a href='week3.html'>week3</a><li><a href='week4.html'>week4</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='week5.html'>week5</a><li><a href='week6.html'>week6</a><li><a href='week7.html'>week7</a><li><a href='week8.html'>week8</a><li><a href='week9.html'>week9</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li class='has-children'><a href='week10.html'>week10</a><ul class='dropdown'><li><a href='task1.html'>task1</a><li><a href='task2.html'>task2</a></li></ul><li class='has-children'><a href='week11.html'>week11</a><ul class='dropdown'><li><a href='task3.html'>task3</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,19 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">repositories create << <a href='repositories create.html'>Previous</a> <a href='stage1.html'>Next</a> >> stage1<br /><h1>week</h1>
-<br />repositories create << <a href='repositories create.html'>Previous</a> <a href='stage1.html'>Next</a> >> stage1</div>
+    <div id="tipue_search_content">task1 << <a href='task1.html'>Previous</a> <a href='week11.html'>Next</a> >> week11<br /><h1>task2</h1>
+<p><span>採 Python remote API 進行操控</span></p>
+<p><span></span></p>
+<p><span>step1  </span></p>
+<p><span>先把5個檔案放在同一個資料夾</span></p>
+<p><span></span></p>
+<p><span><img alt="" height="149" src="./../images/1621441859591.jpg" width="566"/></span></p>
+<p><span>step2</span></p>
+<p><span>打開CoppliaSim(4.2.0)把你要的檔案丟進去  </span></p>
+<p><span><img alt="" height="408" src="./../images/1621441935131.jpg" width="564"/></span></p>
+<p><span></span></p>
+<p><span></span>step3</p>
+<p>把程式複製放在主體的上面</p><br />task1 << <a href='task1.html'>Previous</a> <a href='week11.html'>Next</a> >> week11</div>
         
     <!-- footer -->
       <div class="container">
